RESOLVED FIXED68677
The DFG should not attempt to guess types in the absence of value profiles
https://bugs.webkit.org/show_bug.cgi?id=68677
Summary The DFG should not attempt to guess types in the absence of value profiles
Filip Pizlo
Reported 2011-09-22 20:30:13 PDT
The DFG still has a bunch of code to try to guess the types of variables without knowing any information about how the code will run. This is unnecessary now that we have continuous optimization. The DFG should never attempt to speculate statically; instead points in the code where no sensible speculation can be made should turn into immediate OSR points into the old JIT.
Attachments
the patch (17.38 KB, patch)
2011-09-24 15:30 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2011-09-22 20:31:37 PDT
This blocks https://bugs.webkit.org/show_bug.cgi?id=68593 because live range splitting should be done after parsing, but static predictions are made during parsing. So, implementing 68593 while having to still deal with static predictions will result in a lot more cruft than we should have to put up with.
Filip Pizlo
Comment 2 2011-09-24 15:30:31 PDT
Created attachment 108592 [details] the patch
Filip Pizlo
Comment 3 2011-09-24 15:38:53 PDT
Landed in r95916.
Note You need to log in before you can comment on or make changes to this bug.